feat: update API schema; update package version
