# src/app/api/products/generated/models.ts
@@ -1,20 +1,20 @@
 export { Products } from './models/products';
 export { AvailabilityText } from './models/availability-text';
+export { StoreProduct } from './models/store-product';
 export { Attributes } from './models/attributes';
 export { Label } from './models/label';
 export { Product } from './models/product';
 export { VariantTypename } from './models/variant-typename';
 export { AttributesTypename } from './models/attributes-typename';
 export { ListPrice } from './models/list-price';
-export { JsonResponse400 } from './models/json-response-400';
 export { Variant } from './models/variant';
 export { CurrencyCode } from './models/currency-code';
-export { JsonResponse404 } from './models/json-response-404';
 export { AvailabilityStatus } from './models/availability-status';
 export { FeaturedFlag } from './models/featured-flag';
 export { Price } from './models/price';
 export { FeaturedFlagTypename } from './models/featured-flag-typename';
 export { ListPriceTypename } from './models/list-price-typename';
 export { ProductTypename } from './models/product-typename';
+export { ResponseWithMessage } from './models/response-with-message';
 export { ProductsWrapper } from './models/products-wrapper';
 export { Key } from './models/key';
