# src/app/api/products/generated/models/json-response-400.ts
@@ -1,5 +1,0 @@
-/* tslint:disable */
-export interface JsonResponse400 {
-  message?: string;
-  statusCode?: number;
-}
